--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -89,3 +89,25 @@ textarea:not([rows]) {
 :target {
 	scroll-margin-block: 5ex;
 }
+
+/* 버튼 스타일을 초기화 합니다. */
+button {
+	appearance: none;
+	-webkit-appearance: none;
+	background: none;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font: inherit;
+	color: inherit;
+	line-height: inherit;
+	text-align: inherit;
+	cursor: pointer;
+
+	&:disabled {
+		cursor: default;
+	}
+	&:focus {
+		outline: none;
+	}
+}
