--- a/client/src/styles/overlayHeader.scss
+++ b/client/src/styles/overlayHeader.scss
@@ -31,12 +31,11 @@
 		color: #333;
 		width: 100%;
 		height: 100%;
-		transition:
-			transform 0.2s,
-			color 0.2s;
 	}
 
 	&:hover {
+		background-color: rgba(0, 0, 0, 0.05);
+
 		svg {
 			color: #000;
 			transform: rotate(90deg);
