feat: 모든 페이지 스타일 및 컴포넌트 스타일 수정

--- a/client/src/styles/_breakpoints.scss
+++ b/client/src/styles/_breakpoints.scss
@@ -1,3 +1,9 @@
 $mobile: 768px;
 $tablet: 1024px;
 $desktop: 1440px;
+
+$color_red: #ef4444;
+$color_orange: #f59e0b;
+$color_green: #22c55e;
+$color_blue: #3b82f6;
+$color_gray: #6b7280;
