--- a/client/src/styles/dashboardHeader.scss
+++ b/client/src/styles/dashboardHeader.scss
@@ -4,29 +4,74 @@
 	display: flex;
 	gap: 8px;
 	align-items: center;
-	min-height: 120px;
-	height: auto;
+	height: 120px;
 	width: 100%;
 	position: sticky;
 	top: 0;
 	z-index: 10;
 	padding: 16px;
+	transition: box-shadow 0.2s ease;
 	background-color: rgba(255, 255, 255, 0.4);
 	backdrop-filter: blur(6px);
 	-webkit-backdrop-filter: blur(6px);
 	border: 2px solid rgba(255, 255, 255, 0.7);
 
 	h2 {
-		font-size: 3rem;
+		font-size: 2.2rem;
 		margin-right: auto;
+		transition: font-size 0.2s ease;
+	}
+
+	button {
+		width: 80px;
+		aspect-ratio: 1 / 1;
+		padding: 8px;
+		font-size: 1rem;
+		border: none;
+		border-radius: 8px;
+		color: darken($color_gray, 20%);
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		gap: 4px;
+		font-size: 14px;
+		font-weight: bold;
+
+		svg {
+			width: 40px;
+			height: 40px;
+		}
+
+		&:hover {
+			background-color: rgba(0, 0, 0, 0.05);
+			color: #000;
+		}
 	}
 
 	&.is-scrolled {
-		min-height: 60px;
-		box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.15);
+		height: 60px;
 
 		h2 {
 			font-size: 1.5rem;
+		}
+		button {
+			width: 40px;
+			aspect-ratio: 1 / 1;
+			padding: 4px;
+			font-size: 0;
+			justify-content: center;
+			align-items: center;
+			background-color: #fff;
+
+			svg {
+				width: 20px;
+				height: 20px;
+			}
+
+			&:hover {
+				background-color: #eee;
+			}
 		}
 	}
 }
@@ -35,8 +80,7 @@
 	.dashboard_header {
 		gap: 0;
 		position: sticky;
-		min-height: 80px;
-		height: auto;
+		height: 80px;
 		text-align: center;
 		padding: 8px;
 
@@ -50,7 +94,7 @@
 		}
 
 		&.is-scrolled {
-			min-height: 40px;
+			height: 40px;
 			box-shadow: none;
 
 			h2 {
