--- a/client/src/styles/floatingNav.scss
+++ b/client/src/styles/floatingNav.scss
@@ -16,18 +16,27 @@
 	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
 	z-index: 10;
 	display: none;
-}
 
-.floating_btn {
-	width: 54px;
-	height: 54px;
-	text-align: center;
-	border-radius: 14px;
-	background-color: rgba(255, 255, 255);
-	font-size: 14px;
-	cursor: pointer;
-	text-decoration: none;
-	color: inherit;
+	.floating_btn {
+		width: 54px;
+		height: 54px;
+		text-align: center;
+		border-radius: 14px;
+		background-color: rgba(255, 255, 255);
+		font-size: 14px;
+		cursor: pointer;
+		text-decoration: none;
+		color: inherit;
+		border: 1px solid rgba(0, 0, 0, 0.1);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		svg {
+			width: 24px;
+			height: 24px;
+		}
+	}
 }
 
 @media (max-width: $mobile) {
