--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,5 @@
+@use './breakpoints' as *;
+
 /* box-sizing 규칙을 명시합니다. */
 *,
 *::before,
@@ -12,6 +14,12 @@ html {
 	-webkit-text-size-adjust: none;
 	text-size-adjust: none;
 	font-size: 16px;
+}
+
+@media (max-width: $mobile) {
+	html {
+		font-size: 14px;
+	}
 }
 
 /* 기본 여백을 제거하여 작성된 CSS를 더 잘 제어할 수 있습니다. */
