--- a/client/src/styles/_breakpoints.scss
+++ b/client/src/styles/_breakpoints.scss
@@ -7,3 +7,5 @@ $color_orange: #f59e0b;
 $color_green: #22c55e;
 $color_blue: #3b82f6;
 $color_gray: #6b7280;
+$color_black: #0d0d0e;
+$color_white: #ffffff;
