--- a/client/src/styles/dashboardHeader.scss
+++ b/client/src/styles/dashboardHeader.scss
@@ -1,4 +1,5 @@
 @use './breakpoints' as *;
+@use 'sass:color';
 
 body {
 	overflow-x: hidden; // 선택
@@ -19,10 +20,10 @@ body {
 	z-index: 10;
 	padding: 16px;
 	transition: box-shadow 0.2s ease;
-	background-color: rgba(255, 255, 255, 0.4);
+	background-color: color.adjust($color_white, $alpha: -0.7);
 	backdrop-filter: blur(6px);
 	-webkit-backdrop-filter: blur(6px);
-	border: 2px solid rgba(255, 255, 255, 0.7);
+	border: 1px solid $color_white;
 	transition: all 0.2s ease;
 
 	h2 {
@@ -38,7 +39,7 @@ body {
 		font-size: 1rem;
 		border: none;
 		border-radius: 8px;
-		color: darken($color_gray, 20%);
+		color: color.adjust($color_gray, $lightness: -25%);
 		cursor: pointer;
 		display: flex;
 		align-items: center;
@@ -46,7 +47,7 @@ body {
 		gap: 4px;
 		font-size: 14px;
 		font-weight: bold;
-		border: 1px solid rgba(0, 0, 0, 0.1);
+		border: 1px solid color.adjust($color_black, $alpha: -0.8);
 
 		svg {
 			width: 40px;
@@ -54,8 +55,8 @@ body {
 		}
 
 		&:hover {
-			background-color: rgba(0, 0, 0, 0.05);
-			color: #000;
+			background-color: color.adjust($color_white, $lightness: -5%);
+			color: $color_black;
 		}
 	}
 
@@ -65,6 +66,7 @@ body {
 		h2 {
 			font-size: 1.5rem;
 		}
+
 		button {
 			width: 40px;
 			aspect-ratio: 1 / 1;
@@ -72,7 +74,7 @@ body {
 			font-size: 0;
 			justify-content: center;
 			align-items: center;
-			background-color: #fff;
+			background-color: $color_white;
 
 			svg {
 				width: 20px;
@@ -80,7 +82,7 @@ body {
 			}
 
 			&:hover {
-				background-color: #eee;
+				background-color: color.adjust($color_white, $lightness: -5%);
 			}
 		}
 	}
