--- a/client/src/styles/filterPopover.scss
+++ b/client/src/styles/filterPopover.scss
@@ -1,11 +1,12 @@
 @use './breakpoints' as *;
+@use 'sass:color';
 
 .filter_wapper {
 	width: max-content;
 	width: 260px;
 	position: absolute;
-	background-color: #fff;
-	border: 1px solid #eee;
+	background-color: $color_white;
+	border: 1px solid color.scale($color_white, $lightness: -20%);
 	border-radius: 6px;
 	padding: 12px;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
@@ -26,19 +27,19 @@
 			border-radius: 4px;
 			width: 24px;
 			height: 24px;
+			color: color.adjust($color_gray, $lightness: -25%);
 
 			svg {
-				color: #333;
 				width: 100%;
 				height: 100%;
 				display: block;
 			}
 
 			&:hover {
-				background-color: rgba(0, 0, 0, 0.05);
+				background-color: color.adjust($color_gray, $alpha: -0.9);
+				color: $color_black;
 
 				svg {
-					color: #000;
 					transform: rotate(90deg);
 				}
 			}
@@ -60,27 +61,27 @@
 			gap: 8px;
 
 			button {
-				padding: 6px 0;
-				border-radius: 4px;
-				border: 1px solid #eee;
-				background-color: #f9f9f9;
-				cursor: pointer;
-				text-align: center;
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				flex: 1;
 				gap: 6px;
+				padding: 6px 0;
+				border-radius: 4px;
+				border: 1px solid color.scale($color_white, $lightness: -20%);
+				background-color: $color_white;
+				color: color.adjust($color_gray, $lightness: -25%);
+				cursor: pointer;
+				text-align: center;
 
 				svg {
 					width: 24px;
 					height: 24px;
-					fill: #333;
-					transition: fill 0.15s ease;
 				}
 
 				&:hover {
-					background-color: #eee;
+					background-color: color.adjust($color_gray, $alpha: -0.9);
+					color: $color_black;
 				}
 			}
 		}
@@ -97,7 +98,7 @@
 		}
 
 		.filter_rowDel_content {
-			border: 1px solid #eee;
+			border: 1px solid color.scale($color_white, $lightness: -10%);
 			border-radius: 8px;
 			padding: 8px;
 			max-height: 180px;
@@ -125,7 +126,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			color: #fff;
+			color: $color_white;
 			position: relative;
 			overflow: hidden;
 
@@ -142,10 +143,8 @@
 				transform: translate(-50%, -50%);
 				color: #fff;
 				font-size: 13px;
-				font-weight: 600;
+				font-weight: bold;
 				opacity: 0;
-				pointer-events: none;
-				transition: opacity 0.15s ease;
 			}
 
 			&:hover {
