--- a/client/src/styles/floatingNav.scss
+++ b/client/src/styles/floatingNav.scss
@@ -1,4 +1,5 @@
 @use './breakpoints' as *;
+@use 'sass:color';
 
 .floating_nav {
 	position: fixed;
@@ -8,10 +9,10 @@
 	display: flex;
 	gap: 24px;
 	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.4);
+	background-color: color.adjust($color_white, $alpha: -0.7);
 	backdrop-filter: blur(6px);
 	-webkit-backdrop-filter: blur(6px);
-	border: 2px solid rgba(255, 255, 255, 0.7);
+	border: 1px solid $color_white;
 	border-radius: 16px;
 	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
 	z-index: 10;
@@ -22,12 +23,12 @@
 		height: 54px;
 		text-align: center;
 		border-radius: 14px;
-		background-color: rgba(255, 255, 255);
+		background-color: $color_white;
 		font-size: 14px;
 		cursor: pointer;
 		text-decoration: none;
 		color: inherit;
-		border: 1px solid rgba(0, 0, 0, 0.1);
+		border: 1px solid color.adjust($color_black, $alpha: -0.8);
 		display: flex;
 		align-items: center;
 		justify-content: center;
