--- a/client/src/styles/overlayHeader.scss
+++ b/client/src/styles/overlayHeader.scss
@@ -1,3 +1,6 @@
+@use './breakpoints' as *;
+@use 'sass:color';
+
 .overlay_header {
 	display: flex;
 	align-items: center;
@@ -12,6 +15,7 @@
 	font-weight: 600;
 	text-align: center;
 	padding-left: 40px;
+	color: $color_black;
 }
 
 .overlay_close_button {
@@ -27,18 +31,18 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	color: color.adjust($color_gray, $lightness: -25%);
 
 	svg {
-		color: #333;
 		width: 100%;
 		height: 100%;
 	}
 
 	&:hover {
-		background-color: rgba(0, 0, 0, 0.05);
+		background-color: color.adjust($color_gray, $alpha: -0.9);
+		color: $color_black;
 
 		svg {
-			color: #000;
 			transform: rotate(90deg);
 		}
 	}
