fix: 스타일 버그 수정

--- a/client/src/styles/_breakpoints.scss
+++ b/client/src/styles/_breakpoints.scss
@@ -9,3 +9,4 @@ $color_blue: #3b82f6;
 $color_gray: #6b7280;
 $color_black: #0d0d0e;
 $color_white: #ffffff;
+$style_shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
