--- a/client/src/styles/loadingOverlay.scss
+++ b/client/src/styles/loadingOverlay.scss
@@ -1,5 +1,5 @@
 @use './breakpoints' as *;
-@use 'sass:color';
+@use './theme' as *;
 
 .modal_loading_overlay {
 	position: absolute;
@@ -10,12 +10,12 @@
 	justify-content: center;
 	align-items: center;
 	gap: 12px;
-	background: color.change($color_white, $alpha: 0.86);
+	background: var(--surface-overlay-scrim);
 
 	p {
 		margin: 0;
 		font-weight: 600;
-		color: color.change($color_black, $alpha: 0.82);
+		color: var(--text-dim);
 	}
 }
 
@@ -23,8 +23,8 @@
 	width: 34px;
 	height: 34px;
 	border-radius: 50%;
-	border: 4px solid color.change($color_green, $alpha: 0.22);
-	border-top-color: $color_green;
+	border: 4px solid var(--loading-spinner-track);
+	border-top-color: var(--color-success);
 	animation: modal-spin 0.8s linear infinite;
 }
 
